--- a/basic.html
+++ b/basic.html
@@ -12,7 +12,7 @@
 <a href="http://www.nitm.ac.in">nitm.ac.in</a>
 <br><a href="http://www.nitmeghalaya.ac.in">our clg web</a>
 
-<img src="convocation 2k19.jpg" alt="This is our clg 6th convocation gallery" width="104" height="142">
+<img src="https://rony2020-nitm.github.io/CSE2019NITM/tarun.jpeg" alt="This is Gali" width="104" height="142">
   
   <h1 id = "#top">Links to the examples of this topic</h1>
   <section>
